-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.1
-
macOS 12
-
-
2d71c20d8 (112-based), 67fe83d5d (108-based), 800cf14c2 (dev), 7ec7028c4 (6.6), 02b6c396 (6.5)
Running WebEngine with --device=software causes it to crash when running on battery power with following stack:
* thread #24, name = 'Chrome_InProcGpuThread', stop reason = EXC_BAD_ACCESS (code=1, address=0x128) frame #0: 0x00000001293242c4 QtWebEngineCore`::display() [inlined] get at scoped_refptr.h:282:27 [opt] frame #1: 0x00000001293242c4 QtWebEngineCore`::display() at shared_context_state.cc:722:19 [opt] frame #2: 0x00000001298635d4 QtWebEngineCore`::GpuSwitched() [inlined] UpdateGPUInfoGL at gpu_service_impl.cc:541:61 [opt] frame #3: 0x00000001298635b2 QtWebEngineCore`::GpuSwitched() at gpu_service_impl.cc:1158:19 [opt] frame #4: 0x00000001269dc1f7 QtWebEngineCore`::RunTaskImpl() [inlined] Run at callback.h:145:12 [opt] frame #5: 0x00000001269dc1e6 QtWebEngineCore`::RunTaskImpl() at task_annotator.cc:134:32 [opt] frame #6: 0x00000001269fa29d QtWebEngineCore`::DoWorkImpl() [inlined] RunTask<(lambda at ./../../../../../qtwebengine/src/3rdparty/chromium/base/task/sequence_manager/thread_controller_with_message_pump_impl.cc:443:29)> at task_annotator.h:72:5 [opt] frame #7: 0x00000001269fa27f QtWebEngineCore`::DoWorkImpl() at thread_controller_with_message_pump_impl.cc:441:21 [opt] frame #8: 0x00000001269f9d7e QtWebEngineCore`::DoWork() at thread_controller_with_message_pump_impl.cc:297:30 [opt] frame #9: 0x00000001269fa945 QtWebEngineCore at thread_controller_with_message_pump_impl.cc:0 [opt] frame #10: 0x000000012697c0dc QtWebEngineCore`::Run() at message_pump_default.cc:40:55 [opt] frame #11: 0x00000001269fac61 QtWebEngineCore`::Run() at thread_controller_with_message_pump_impl.cc:600:12 [opt] frame #12: 0x00000001269b27f5 QtWebEngineCore`::Run() at run_loop.cc:141:14 [opt] frame #13: 0x0000000126a21be8 QtWebEngineCore`::Run() at thread.cc:338:13 [opt] frame #14: 0x0000000126a21d7a QtWebEngineCore`::ThreadMain() at thread.cc:408:3 [opt] frame #15: 0x0000000126a4be98 QtWebEngineCore`::ThreadFunc() at platform_thread_posix.cc:103:13 [opt] frame #16: 0x00007ff818c7a4e1 libsystem_pthread.dylib`_pthread_start + 125 frame #17: 0x00007ff818c75f6b libsystem_pthread.dylib`thread_start + 15
- is duplicated by
-
QTBUG-116425 QWebEngineView crashes when setting Scene Graph Adaptations to be "Software"
-
- Closed
-
| For Gerrit Dashboard: QTBUG-114752 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 492881,2 | [macOS] Do not subscribe to display callbacks when GPU is disabled | 112-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 495184,2 | [macOS] Do not subscribe to display callbacks when GPU is disabled | 108-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 496501,2 | Update Chromium | 6.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |