[macOS] Do not subscribe to display callbacks when GPU is disabled

The callbacks are handled as a GPU info update, which will lead to a
crash because the shared contexts cannot be initialized.

Additionally, check if the context state could be successfully
initialized before trying to update the GPU info.

Pick-to: 108-based
Task-number: QTBUG-114752
Change-Id: Idfe7de3e429c49d57874bb82f503e7bb863aa899
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/492881
Reviewed-by: Michal Klocek <michal.klocek@qt.io>