chromium/content/browser/gpu/gpu_data_manager_impl_private.cc
@@ -510,7 +510,9 @@ GpuDataManagerImplPrivate::GpuDataManagerImplPrivate(GpuDataManagerImpl* owner)
   }
 
 #if BUILDFLAG(IS_MAC)
-  CGDisplayRegisterReconfigurationCallback(DisplayReconfigCallback, owner_);
+  if (!command_line->HasSwitch(switches::kDisableGpu)) {
+    CGDisplayRegisterReconfigurationCallback(DisplayReconfigCallback, owner_);
+  }
 #endif  // BUILDFLAG(IS_MAC)
 
   // For testing only.
